✅ 타입 스크립트 적용 중 & 투두 추가 기능까지 완료

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-dom": "^18.2.7",
+    "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.2",
     "axios": "^0.27.2",
+    "caniuse-lite": "^1.0.30001522",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -17,7 +21,9 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
+    "styled-components": "^6.0.7",
+    "styled-reset": "4.4.1",
+    "typescript": "^5.1.6",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
