--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.5",
+    "file-saver": "^2.0.5"
   }
 }
