🔧 프로젝트 이름과 버전 업데이트 & 매니페스트 아이콘 및 저장 버튼 기능 개선

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tsc-todo-list",
-  "version": "0.1.0",
+  "name": "shape-of-task",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
