--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "shape-of-task",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "@types/lodash": "^4.17.14",
     "@types/react-dom": "^19.0.2",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
-    "axios": "^0.27.2",
-    "caniuse-lite": "^1.0.30001692",
     "html2canvas": "^1.4.1",
-    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
@@ -25,12 +21,12 @@
     "styled-components": "^6.0.7",
     "styled-reset": "4.5.2",
     "typescript": "^5.1.6",
-    "uuid": "^8.3.2",
-    "web-vitals": "^4.2.4"
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "serve": "serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -53,8 +49,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/file-saver": "^2.0.5",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "file-saver": "^2.0.5"
   }
 }
