--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-scripts": "5.0.0",
     "styled-components": "^6.0.7",
     "styled-reset": "4.5.2",
-    "typescript": "^5.1.6",
+    "typescript": "~5.1.6",
     "uuid": "^8.3.2"
   },
   "scripts": {
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/helper-function-name": "^7.24.7",
+    "@babel/helper-split-export-declaration": "^7.24.7",
     "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/file-saver": "^2.0.5",
