--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/react-dom": "^19.0.2",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
     "html2canvas": "^1.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^5.4.0",
     "react-redux": "^8.0.4",
@@ -49,17 +48,22 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "7.25.9",
+    "@babel/core": "7.23.9",
     "@babel/helper-builder-binary-assignment-operator-visitor": "^7.25.9",
     "@babel/helper-function-name": "^7.24.7",
     "@babel/helper-split-export-declaration": "^7.24.7",
     "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "7.25.9",
-    "@babel/preset-react": "7.25.9",
+    "@babel/preset-env": "7.23.9",
+    "@babel/preset-react": "^7.26.3",
     "@types/file-saver": "^2.0.5",
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
+    "babel-preset-react-app": "10.0.1",
+    "eslint": "8.57.0",
+    "eslint-config-react-app": "^7.0.1",
     "file-saver": "^2.0.5"
   }
 }
