--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-syntax-jsx": "^7.16.0",
+    "@babel/preset-env": "7.23.9",
+    "@babel/preset-react": "7.26.3",
     "@reduxjs/toolkit": "^1.8.6",
+    "@testing-library/dom": "10.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
+    "babel-preset-react-app": "^10.0.1",
     "html2canvas": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -48,20 +54,18 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "7.23.9",
     "@babel/helper-builder-binary-assignment-operator-visitor": "^7.25.9",
     "@babel/helper-function-name": "^7.24.7",
     "@babel/helper-split-export-declaration": "^7.24.7",
     "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "7.23.9",
-    "@babel/preset-react": "^7.26.3",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@babel/plugin-syntax-flow": "7.14.5",
+    "@babel/plugin-transform-react-jsx": "7.14.9",
     "@types/file-saver": "^2.0.5",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
-    "babel-preset-react-app": "10.0.1",
     "eslint": "8.57.0",
     "eslint-config-react-app": "^7.0.1",
     "file-saver": "^2.0.5"
