--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "build": "react-scripts build",
     "serve": "serve -s build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src --ext .ts,.tsx"
   },
   "eslintConfig": {
     "extends": [
