--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "shape-of-task",
   "version": "2.0.0",
+  "type": "module",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-syntax-jsx": "^7.16.0",
-    "@babel/preset-env": "7.23.9",
-    "@babel/preset-react": "7.26.3",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/dom": "10.0.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -14,7 +11,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
-    "babel-preset-react-app": "^10.0.1",
     "html2canvas": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,25 +18,18 @@
     "react-icons": "^5.4.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "styled-components": "^6.0.7",
+    "styled-components": "^6.1.19",
     "styled-reset": "4.5.2",
     "typescript": "~5.1.6",
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "serve": "serve -s build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src --ext .ts,.tsx"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "dev": "vite",
+    "start": "vite",
+    "build": "tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "serve": "vite preview",
+    "lint": "eslint src"
   },
   "browserslist": {
     "production": [
@@ -55,20 +44,18 @@
     ]
   },
   "devDependencies": {
-    "@babel/helper-builder-binary-assignment-operator-visitor": "^7.25.9",
-    "@babel/helper-function-name": "^7.24.7",
-    "@babel/helper-split-export-declaration": "^7.24.7",
-    "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "@babel/plugin-syntax-flow": "7.14.5",
-    "@babel/plugin-transform-react-jsx": "7.14.9",
     "@types/file-saver": "^2.0.5",
-    "@types/react": "^19.0.4",
-    "@types/react-dom": "^19.0.2",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
+    "@vitejs/plugin-react": "^4.5.2",
     "eslint": "8.57.0",
-    "eslint-config-react-app": "^7.0.1",
-    "file-saver": "^2.0.5"
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "file-saver": "^2.0.5",
+    "vite": "^6.3.5",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
